# statseq

./: README.md  pyproject.toml
statseq/: __init__.py  cli.py  fareader.py  fastaseq.py  fastat.py
